Initial code upload

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "url": "https://github.com/Creeplays/modpe-squid"
   },
   "author": "Creeplays <hhhaker6@gmail.com> (http://fccccc.cf/)",
-  "license": "WTFPL",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/Creeplays/modpe-squid/issues"
   }
