--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/Creeplays/modpe-squid/issues"
+  },
+  "dependencies": {
+    "node-dir": "~0.1.9"
   }
 }
