--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "url": "https://github.com/Creeplays/modpe-squid/issues"
   },
   "dependencies": {
-    "node-dir": "~0.1.9"
+    "node-dir": "~0.1.9",
+    "vec3": "0.1.3"
   }
 }
